fix(header): move monitorign link to the top header element
Remove the monitoring link from the nav element and move it to the core header.
This element was overlapping with the rest of the links on narrow views like
on pones in portrait mode.

--- a/src/layout/header/core-demo-header-component.scss
+++ b/src/layout/header/core-demo-header-component.scss
@@ -1,6 +1,5 @@
 header {
   display: flex;
-  align-items: baseline;
   justify-content: space-between;
   width: 100%;
   margin: var(--size-4) 0;
@@ -33,4 +32,14 @@ h1 {
 [part="header-end"] {
   display: flex;
   align-items: center;
+}
+
+@media (width < 768px) {
+  [part="brand-logo"] {
+    height: var(--size-5);
+  }
+
+  h1 {
+    font-size: var(--size-5);
+  }
 }
